[gd_scene load_steps=30 format=2]

[ext_resource path="res://Source/VFX/unshaded.tres" type="Material" id=1]
[ext_resource path="res://Main/Main.gd" type="Script" id=2]
[ext_resource path="res://Source/SFX/House In a Forest Loop.ogg" type="AudioStream" id=3]
[ext_resource path="res://Main/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Source/SFX/lowFrequency_explosion_000.ogg" type="AudioStream" id=5]

[sub_resource type="CanvasItemMaterial" id=19]
light_mode = 1

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.263566, 0.98708 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.155779, 1 ), -3.92585, -3.92585, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 640, 360, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 180.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 5.0
scale_random = 1.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )
hue_variation = 0.3
hue_variation_random = 1.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "zoom_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "zoom_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Environment" id=5]
background_mode = 4
glow_enabled = true
glow_bloom = 1.0
glow_high_quality = true

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.637755, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 2
emission_box_extents = Vector3( 640, 1, 0 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 2
emission_box_extents = Vector3( 640, 1, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 2
emission_box_extents = Vector3( 1, 360, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=18]
emission_shape = 2
emission_box_extents = Vector3( 1, 360, 0 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel2/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel2:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=21]
resource_name = "authenticating_session"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Panel2/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Reaching Server", "Reaching Server.", "Reaching Server..", "Reaching Server..." ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=22]
resource_name = "done"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Panel2/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Done", "" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel2:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=24]
resource_name = "error"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Panel2/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "can't, reach server", "" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel2:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=23]
resource_name = "pop_in"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel2:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel2/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}

[sub_resource type="Animation" id=25]
resource_name = "retrieving_leaderboard"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Panel2/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "retrieving leaderboard", "retrieving leaderboard.", "retrieving leaderboard..", "retrieving leaderboard..." ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Main" type="Node" groups=["Main"]]
script = ExtResource( 2 )
MUSIC_VOLUME_MIN = -10.0
MUSIC_VOLUME_MAX = -5.0
ExplosionSound = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enable = true

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0196078, 0.172549, 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
color = Color( 0.188235, 0.164706, 0.454902, 1 )

[node name="CanvasLayer2" type="CanvasLayer" parent="CanvasLayer"]
layer = -3

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/CanvasLayer2"]
material = SubResource( 19 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0, 0.0941176, 1 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 10, 10, 10, 1 )
position = Vector2( 640, 360 )
amount = 30
explosiveness = 0.2
randomness = 1.0
visibility_rect = Rect2( -640, -360, 1279.82, 719.615 )
local_coords = false
process_material = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="." groups=["Camera"]]
material = ExtResource( 1 )
position = Vector2( 640, 360 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1280
limit_bottom = 720
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
anims/RESET = SubResource( 2 )
anims/zoom_in = SubResource( 3 )
anims/zoom_out = SubResource( 4 )

[node name="Containers" type="Node" parent="."]

[node name="HealthBars" type="Node" parent="Containers"]

[node name="Bullets" type="Node" parent="Containers"]

[node name="Enemies" type="Node" parent="Containers" groups=["EnemiesContainer"]]

[node name="Explosions" type="Node" parent="Containers"]

[node name="PowerUps" type="Node" parent="Containers"]

[node name="Player" type="Node" parent="Containers" groups=["PlayerContainer"]]

[node name="Sounds" type="Node" parent="Containers"]

[node name="Scene" type="Node" parent="." groups=["Scene"]]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="." groups=["Music"]]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="borders" type="Node" parent="."]

[node name="Up" type="Particles2D" parent="borders"]
modulate = Color( 10, 10, 10, 1 )
position = Vector2( 640, 0 )
amount = 100
explosiveness = 0.1
randomness = 1.0
visibility_rect = Rect2( -655.23, -0.94692, 1302.43, 50.1025 )
process_material = SubResource( 15 )

[node name="Down" type="Particles2D" parent="borders"]
modulate = Color( 10, 10, 10, 1 )
position = Vector2( 640, 720 )
amount = 100
explosiveness = 0.1
randomness = 1.0
visibility_rect = Rect2( -666.462, -49.921, 1334.22, 50.8943 )
process_material = SubResource( 16 )

[node name="Left" type="Particles2D" parent="borders"]
modulate = Color( 10, 10, 10, 1 )
position = Vector2( 0, 360 )
amount = 64
explosiveness = 0.1
randomness = 1.0
visibility_rect = Rect2( -0.980213, -381.259, 51.2977, 759.367 )
process_material = SubResource( 17 )

[node name="Right" type="Particles2D" parent="borders"]
modulate = Color( 10, 10, 10, 1 )
position = Vector2( 1280, 360 )
amount = 64
explosiveness = 0.1
randomness = 1.0
visibility_rect = Rect2( -49.0881, -377.206, 50.0531, 754.237 )
process_material = SubResource( 18 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel2" type="Panel" parent="CanvasLayer2/Control"]
margin_left = 290.0
margin_top = 310.0
margin_right = 990.0
margin_bottom = 410.0
rect_min_size = Vector2( 700, 100 )
rect_pivot_offset = Vector2( 350, 50 )

[node name="Label" type="Label" parent="CanvasLayer2/Control/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
align = 1
valign = 1
uppercase = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="CanvasLayer2/Control"]
anims/RESET = SubResource( 20 )
anims/authenticating_session = SubResource( 21 )
anims/done = SubResource( 22 )
anims/error = SubResource( 24 )
anims/pop_in = SubResource( 23 )
anims/retrieving_leaderboard = SubResource( 25 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
